--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="UTF-8">
-    <title>Login Page</title>
+    <title>Thorax Login Page</title>
     <style>
     body {
         font-family: Arial;
@@ -26,7 +26,9 @@
 
 <body>
 <h1>
-Login Page
+    <img src="logo.jpg" alt="Thorax Logo">
+    <br>
+    Thorax Login Page
 </h1>
  
 <form name="login">
