--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 <body>
 <h1>
-    <img src="logo.png" alt="Thorax Logo" style="width:auto;">
+    <img src="logo.png" alt="Thorax Logo" style="width:100px">
     <br>
     Thorax Login Page
 </h1>
