--- a/main.html
+++ b/main.html
@@ -5,7 +5,7 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="UTF-8">
-    <title>Main Page</title>
+    <title>Thorax Main Page</title>
     <style>
     body {
         font-family: Arial;
@@ -36,14 +36,16 @@
 
 <body>
 <h1>
-    Main Page
+    <img src="logo.png" alt="Thorax Logo" style="width:100px">
+    <br>
+    Thorax Main Page
 </h1>
 <h2>
-    <a href="raw.html" class="button">Raw</a>
+    <a href="raw.html" class="button">Raw data</a>
     <br>
-    <a href="fourier.html" class="button">Fourier</a>
+    <a href="fourier.html" class="button">Fourier transformed</a>
     <br>
-    <a href="fft_psd.html" class="button">FFT</a>
+    <a href="fft_psd.html" class="button">Fast Fourier transformed</a>
 </h2>
 
 
