--- a/fourier.html
+++ b/fourier.html
@@ -4,7 +4,7 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="UTF-8">
-    <title>Fourier</title>
+    <title>Thorax Fourier transformed</title>
     <style>
     body {
         font-family: Arial;
@@ -35,7 +35,9 @@
 
 <body>
 <h1>
-    Fourier
+    <img src="logo.png" alt="Thorax Logo" style="width:100px">
+    <br>
+    Thorax Fourier transformed
 </h1>
 <h2>
     <a href="main.html" class="button">Main Page</a>
