--- a/fft_psd.html
+++ b/fft_psd.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-    
+
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">-->
+    <!--<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
     <meta charset="UTF-8">
-    <title>FFT</title>
+    <title>Thorax Fast Fourier transformed</title>
     <style>
         body {
             font-family: Arial;
@@ -74,7 +74,9 @@
 
 <body>
 <h1>
-    FFT
+    <img src="logo.png" alt="Thorax Logo" style="width:100px">
+    <br>
+    Thorax Fast Fourier transformed
 </h1>
 <h2>
     <a href="main.html" class="button">Main Page</a>
