--- a/raw.html
+++ b/raw.html
@@ -146,7 +146,7 @@
         output.innerHTML  = "alpha : " + z + "\n";
         output.innerHTML  += "beta : " + x + "\n";
         output.innerHTML += "gamma: " + y + "\n";
-        output.innerHTML += "fps: " + 1000/fps + "\n";
+        //output.innerHTML += "fps: " + 1000/fps + "\n";
 
     });
 </script>
