--- a/fft_psd.html
+++ b/fft_psd.html
@@ -145,10 +145,10 @@
         if (slider.value==3 && ii%skip==0){zs.push(z);}
         if ((slider.value==1 && xs.length > size)||(slider.value==2 && ys.length > size)||(slider.value==3 && zs.length > size)) {
             var tmp;
-            output.innerHTML  = "alpha : " + z + "\n";
-            output.innerHTML  += "beta : " + x + "\n";
+            output.innerHTML += "alpha : " + z + "\n";
+            output.innerHTML += "beta : " + x + "\n";
             output.innerHTML += "gamma: " + y + "\n";
-            output.innerHTML += "Res: " + 60*1/256*1000/t/skip + "\n";
+            output.innerHTML += "res: " + 60*1/256*1000/t/skip + "\n";
             if (slider.value==1){
                 tmp = xs.shift();
                 output.innerHTML  += "x max freq: " + 60*pwr_spect(xs)/256*1000/t/skip + "\n";
