--- a/fourier.html
+++ b/fourier.html
@@ -49,7 +49,7 @@
     alpha:
     beta:
     gamma:
-    fps:
+    <!--fps:-->
 </pre>
 
 
@@ -207,7 +207,7 @@
         output.innerHTML += "alpha : " + z + "\n";
         output.innerHTML += "beta : " + x + "\n";
         output.innerHTML += "gamma: " + y + "\n";
-        output.innerHTML += "fps: " + 1000/fps + "\n";
+        //output.innerHTML += "fps: " + 1000/fps + "\n";
 
     });
 </script>
