--- a/fft_psd.html
+++ b/fft_psd.html
@@ -6,7 +6,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
     <meta charset="UTF-8">
-    <title>Thorax Fast Fourier transformed</title>
+    <title>Thorax Power Density Spectrum</title>
     <style>
         body {
             font-family: Arial;
@@ -74,7 +74,7 @@
 <h1>
     <img src="logo.png" alt="Thorax Logo" style="width:100px">
     <br>
-    Thorax Fast Fourier transformed
+    Thorax Power Density Spectrum
 </h1>
 <h2>
     <a href="main.html" class="button">Main Page</a>
