--- a/main.html
+++ b/main.html
@@ -41,11 +41,11 @@
     Thorax Main Page
 </h1>
 <h2>
-    <a href="raw.html" class="button">Raw data</a>
+    <a href="raw.html" class="button">Raw Data</a>
     <br>
-    <a href="fourier.html" class="button">Fourier transformed</a>
+    <a href="fourier.html" class="button">Fourier Transformed</a>
     <br>
-    <a href="fft_psd.html" class="button">Fast Fourier transformed</a>
+    <a href="fft_psd.html" class="button">Thorax Power Density Spectrum</a>
 </h2>
 
 
