--- a/fourier.html
+++ b/fourier.html
@@ -4,7 +4,7 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="UTF-8">
-    <title>Thorax Fourier transformed</title>
+    <title>Thorax Fourier Transformed</title>
     <style>
     body {
         font-family: Arial;
@@ -37,7 +37,7 @@
 <h1>
     <img src="logo.png" alt="Thorax Logo" style="width:100px">
     <br>
-    Thorax Fourier transformed
+    Thorax Fourier Transformed
 </h1>
 <h2>
     <a href="main.html" class="button">Main Page</a>
