--- a/fourier.html
+++ b/fourier.html
@@ -204,7 +204,7 @@
         //var arr = [1, 2, 3, 4];
         //var theRemovedElement = arr.shift(); // theRemovedElement == 1
         //console.log(arr); // [2, 3, 4]
-        output.innerHTML += "alpha : " + z + "\n";
+        output.innerHTML = "alpha : " + z + "\n";
         output.innerHTML += "beta : " + x + "\n";
         output.innerHTML += "gamma: " + y + "\n";
         //output.innerHTML += "fps: " + 1000/fps + "\n";
