--- a/main.html
+++ b/main.html
@@ -45,7 +45,7 @@
     <br>
     <a href="fourier.html" class="button">Fourier Transformed</a>
     <br>
-    <a href="fft_psd.html" class="button">Thorax Power Density Spectrum</a>
+    <a href="fourier_pds.html" class="button">Thorax Power Density Spectrum</a>
 </h2>
 
 
