--- a/fourier.html
+++ b/fourier.html
@@ -62,6 +62,8 @@
     var ys = [0];
     var zs = [0];
     var ii = 0;
+    const size = 128;
+    const skip = 12;
     
     function setup() {
         createCanvas(512, 256);
