--- a/raw.html
+++ b/raw.html
@@ -61,6 +61,8 @@
     var xs = [0];
     var ys = [0];
     var zs = [0];
+    const size = 128;
+    const skip = 12;
 
     function setup() {
         createCanvas(512, 256);
