--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 <input type="button" onclick="check(this.form)" value="Login"/>
 <input type="reset" value="Cancel"/>
 </form>
-
+admin@admin
 <script>
 function check(form)//Check userid and pswd
 {
