--- a/main.html
+++ b/main.html
@@ -45,7 +45,8 @@
     <br>
     <a href="fourier.html" class="button">Fourier Transformed</a>
     <br>
-    <a href="hr_rr.html" class="button">Thorax respiratory and heart rate</a>
+    <!--<a href="fourier_pds.html" class="button">Thorax Power Density Spectrum</a>-->
+    <a href="hr_rr.html" class="button">Thorax Respiratory And Heart Rate</a>
 </h2>
 
 
