--- a/index.html
+++ b/index.html
@@ -1,70 +1,145 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html xmlns="http://www.w3.org/1999/xhtml">
 
 <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta charset="UTF-8">
-    <title>Thorax Login Page</title>
-    <style>
-    body {
-        font-family: Arial;
-        font-size: 20px;
-    }
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+	<title>Responsive Width - fullPage.js</title>
+	<meta name="author" content="Alvaro Trigo Lopez" />
+	<meta name="description" content="fullPage full-screen navigation and sections control menu." />
+	<meta name="keywords"  content="fullpage,jquery,demo,screen,fullscreen,navigation,control arrows, dots" />
+	<meta name="Resource-type" content="Document" />
 
-    h1 { 
-  	     display: block;
-  	     font-size: 2em;
-  	     margin-top: 1.5em;
-  	     margin-bottom: 1em;
-  	     margin-left: 0;
-         margin-right: 0;
-  	     font-weight: bold;
-    }
-    </style>
+
+	<link rel="stylesheet" type="text/css" href="fullpage.css" />
+	<link rel="stylesheet" type="text/css" href="examples.css" />
+	<style>
+
+	/* Style for our header texts
+	* --------------------------------------- */
+	h1{
+		font-size: 5em;
+		font-family: arial,helvetica;
+		color: #fff;
+		margin:0;
+	}
+	.intro p{
+		color: #fff;
+	}
+
+	/* Centered texts in each section
+	* --------------------------------------- */
+	.section{
+		text-align:center;
+	}
+
+	/* Bottom menu
+	* --------------------------------------- */
+	#infoMenu li a {
+		color: #fff;
+	}
+	</style>
+
+	<!--[if IE]>
+		<script type="text/javascript">
+			 var console = { log: function() {} };
+		</script>
+	<![endif]-->
 </head>
-
 <body>
-<h1>
-    <img src="logo.png" alt="Thorax Logo" style="width:100px">
-    <br>
-    Thorax Login Page
-</h1>
- 
-<form name="login">
-<table>
-  <tr>
-    <td>Username</td>
-    <td><input type="text" name="userid"/></td> 
-  </tr>
-  <tr>
-    <td>Password</td>
-    <td><input type="password" name="pswd"/></td>
-  </tr>
-</table>
-<br>
-<input type="button" onclick="check(this.form)" value="Login"/>
-<input type="reset" value="Cancel"/>
-</form>
-<br>
-admin@admin
-<script>
-function check(form)//Check userid and pswd
-{
- if(form.userid.value == "admin" && form.pswd.value == "admin")
-  {
-    window.open('main.html', '_self')
-  }
- else
- {
-   alert("Incorrect Username or Password")
-  }
-}
+
+<div id="fullpage">
+	<div class="section " id="section0">
+		<div class="intro">
+			<h1>Mindenkinek maszkot!</h1>
+			<p>A COVID-19 terjedése a maszkok használatával lassítható</p>
+		</div>
+        <div class="slide" id="slide1">
+            <div class="intro">
+                <h1>Miért jó a maszk?</h1>
+            </div>
+        </div>
+        <div class="slide" id="slide2">
+            <div class="intro">
+                <h1>Pontosabban arról, hogy mire jó a maszk</h1>
+            </div>
+        </div>
+        <div class="slide" id="slide3">
+            <div class="intro">
+                <h1>Nagyon tudományos rész</h1>
+            </div>
+        </div>
+	</div>
+	<div class="section" id="section1">
+		<div class="slide" id="slide1">
+			<h1>Első lépés</h1>
+            <img src="1.png" width="400">
+		</div>
+        <div class="slide" id="slide2">
+            <h1>Első lépésben lehetséges hiba</h1>
+        </div>
+	</div>
+    <div class="section" id="section2">
+        <div class="slide" id="slide1">
+            <h1>Második lépés</h1>
+            <img src="2.png" width="400">
+        </div>
+        <div class="slide" id="slide2">
+            <h1>Második lépésben lehetséges hiba</h1>
+        </div>
+    </div>
+    <div class="section" id="section3">
+        <div class="slide" id="slide1">
+            <h1>Harmadik lépés</h1>
+            <img src="3.png" width="400">
+        </div>
+        <div class="slide" id="slide2">
+            <h1>Harmadik lépésben lehetséges hiba</h1>
+        </div>
+    </div>
+    <div class="section" id="section4">
+        <div class="slide" id="slide1">
+            <h1>Negyedik lépés</h1>
+            <img src="4.png" width="400">
+        </div>
+        <div class="slide" id="slide2">
+            <h1>Negyedik lépésben lehetséges hiba</h1>
+        </div>
+    </div>
+    <div class="section" id="section5">
+        <div class="slide">
+            <h1>Ötödik lépés</h1>
+            <img src="5.png" width="400">
+
+        </div>
+        <div class="slide">
+            <h1>Sokadik lépésben lehetséges hiba</h1>
+        </div>
+    </div>
+    <div class="section" id="section6">
+        <div class="slide">
+            <h1>Maradj otthon</h1>
+        </div>
+    </div>
+</div>
+
+<script type="text/javascript" src="fullpage.js"></script>
+<script type="text/javascript" src="examples.js"></script>
+
+<script type="text/javascript">
+    var myFullpage = new fullpage('#fullpage', {
+        anchors: ['firstPage', 'secondPage', '3rdPage'],
+        sectionsColor: ['#05668D', '#028090','#49A097', '#00A896',
+            '#02C39A', '#95AD9A', '#CEE2A3', '#DBCCBC',  '#8EE2A3'],
+        navigation: true,
+        navigationPosition: 'right',
+        navigationTooltips: ['First page', 'Second page', 'Third and last page'],
+        responsiveWidth: 900,
+        afterResponsive: function(isResponsive){
+
+        }
+
+    });
 </script>
+
 </body>
-
-
-
 </html>
-
-
