--- a/index.html
+++ b/index.html
@@ -1,145 +1,182 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml">
-
+<html lang="en">
 <head>
-	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-	<title>Responsive Width - fullPage.js</title>
-	<meta name="author" content="Alvaro Trigo Lopez" />
-	<meta name="description" content="fullPage full-screen navigation and sections control menu." />
-	<meta name="keywords"  content="fullpage,jquery,demo,screen,fullscreen,navigation,control arrows, dots" />
-	<meta name="Resource-type" content="Document" />
-
-
-	<link rel="stylesheet" type="text/css" href="fullpage.css" />
-	<link rel="stylesheet" type="text/css" href="examples.css" />
-	<style>
-
-	/* Style for our header texts
-	* --------------------------------------- */
-	h1{
-		font-size: 5em;
-		font-family: arial,helvetica;
-		color: #fff;
-		margin:0;
-	}
-	.intro p{
-		color: #fff;
-	}
-
-	/* Centered texts in each section
-	* --------------------------------------- */
-	.section{
-		text-align:center;
-	}
-
-	/* Bottom menu
-	* --------------------------------------- */
-	#infoMenu li a {
-		color: #fff;
-	}
-	</style>
-
-	<!--[if IE]>
-		<script type="text/javascript">
-			 var console = { log: function() {} };
-		</script>
-	<![endif]-->
-</head>
-<body>
-
-<div id="fullpage">
-	<div class="section " id="section0">
-		<div class="intro">
-			<h1>Mindenkinek maszkot!</h1>
-			<p>A COVID-19 terjedése a maszkok használatával lassítható</p>
-		</div>
-        <div class="slide" id="slide1">
-            <div class="intro">
-                <h1>Miért jó a maszk?</h1>
-            </div>
-        </div>
-        <div class="slide" id="slide2">
-            <div class="intro">
-                <h1>Pontosabban arról, hogy mire jó a maszk</h1>
-            </div>
-        </div>
-        <div class="slide" id="slide3">
-            <div class="intro">
-                <h1>Nagyon tudományos rész</h1>
-            </div>
-        </div>
-	</div>
-	<div class="section" id="section1">
-		<div class="slide" id="slide1">
-			<h1>Első lépés</h1>
-            <img src="1.png" width="400">
-		</div>
-        <div class="slide" id="slide2">
-            <h1>Első lépésben lehetséges hiba</h1>
-        </div>
-	</div>
-    <div class="section" id="section2">
-        <div class="slide" id="slide1">
-            <h1>Második lépés</h1>
-            <img src="2.png" width="400">
-        </div>
-        <div class="slide" id="slide2">
-            <h1>Második lépésben lehetséges hiba</h1>
-        </div>
-    </div>
-    <div class="section" id="section3">
-        <div class="slide" id="slide1">
-            <h1>Harmadik lépés</h1>
-            <img src="3.png" width="400">
-        </div>
-        <div class="slide" id="slide2">
-            <h1>Harmadik lépésben lehetséges hiba</h1>
-        </div>
-    </div>
-    <div class="section" id="section4">
-        <div class="slide" id="slide1">
-            <h1>Negyedik lépés</h1>
-            <img src="4.png" width="400">
-        </div>
-        <div class="slide" id="slide2">
-            <h1>Negyedik lépésben lehetséges hiba</h1>
-        </div>
-    </div>
-    <div class="section" id="section5">
-        <div class="slide">
-            <h1>Ötödik lépés</h1>
-            <img src="5.png" width="400">
-
-        </div>
-        <div class="slide">
-            <h1>Sokadik lépésben lehetséges hiba</h1>
-        </div>
-    </div>
-    <div class="section" id="section6">
-        <div class="slide">
-            <h1>Maradj otthon</h1>
-        </div>
-    </div>
-</div>
-
-<script type="text/javascript" src="fullpage.js"></script>
-<script type="text/javascript" src="examples.js"></script>
-
-<script type="text/javascript">
-    var myFullpage = new fullpage('#fullpage', {
-        anchors: ['firstPage', 'secondPage', '3rdPage'],
-        sectionsColor: ['#05668D', '#028090','#49A097', '#00A896',
-            '#02C39A', '#95AD9A', '#CEE2A3', '#DBCCBC',  '#8EE2A3'],
-        navigation: true,
-        navigationPosition: 'right',
-        navigationTooltips: ['First page', 'Second page', 'Third and last page'],
-        responsiveWidth: 900,
-        afterResponsive: function(isResponsive){
-
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="UTF-8">
+    <title>Pulse and repiratory rate</title>
+    <style>
+        .slidecontainer {
+            width: 100%;
         }
 
-    });
-</script>
+        .slider {
+            -webkit-appearance: none;
+            width: 100%;
+            height: 25px;
+            background: #d3d3d3;
+            outline: none;
+            opacity: 0.7;
+            -webkit-transition: .2s;
+            transition: opacity .2s;
+        }
 
+        .slider:hover {
+            opacity: 1;
+        }
+
+        .slider::-webkit-slider-thumb {
+            -webkit-appearance: none;
+            appearance: none;
+            width: 25px;
+            height: 25px;
+            background: #4CAF50;
+            cursor: pointer;
+        }
+
+        .slider::-moz-range-thumb {
+            width: 25px;
+            height: 25px;
+            background: #4CAF50;
+            cursor: pointer;
+        }
+    </style>
+</head>
+<body>
+<h1>
+    Respiratory rate and heart rate
+</h1>
+<br>
+<select id="ddlViewBy">
+    <option value="1">x</option>
+    <option value="2" selected="selected">y</option>
+    <option value="3">z</option>
+</select>
+
+<pre class="output">
+Wait 30s!
+</pre>
+
+
+
+<script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@0.15.1/dist/tf.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/nosleep/0.6.0/NoSleep.min.js"></script>
+<script>
+
+
+
+    let xs = [];
+    let ys = [];
+    let zs = [];
+    let ii = 0;
+    var tmp = 0;
+    const size = 128;
+    const skip = 10;
+    let data;
+    let sf;
+    let t;
+    let output = document.querySelector('.output');
+    var slider = document.getElementById("ddlViewBy");
+    tf.setBackend('webgl');
+    function pwr_spect( hr_low = 40, hr_high = 120, rr_low = 10, rr_high = 40) {
+        //console.log(tf.memory());
+        let real = tf.tensor(data);
+        //console.log(tf.memory());
+        let imag = tf.zeros([data.length]);
+
+        let input = tf.complex(real, imag);
+        let res = tf.spectral.fft(input);
+
+        let Fs = 1/t;
+        let c = res.abs().square();
+        let d = tf.scalar(1/(data.length*Fs));
+        let pxx = c.mul(d);
+        let hr_min = Math.floor(hr_low/60*data.length/sf);
+        let rr_min = Math.floor(rr_low/60*data.length/sf);
+        let hr_max = Math.ceil(hr_high/60*data.length/sf);
+        let rr_max = Math.ceil(rr_high/60*data.length/sf);
+        let freki = tf.linspace(0, data.length, Math.ceil(data.length));
+        let hr_min_array = tf.fill(freki.shape, hr_min);
+        let hr_max_array = tf.fill(freki.shape, hr_max);
+        let rr_min_array = tf.fill(freki.shape, rr_min);
+        let rr_max_array = tf.fill(freki.shape, rr_max);
+        let hr_min_array_log = tf.greater(freki, hr_min_array);
+        let rr_min_array_log = tf.greater(freki, rr_min_array);
+        let hr_max_array_log = tf.less(freki, hr_max_array);
+        let rr_max_array_log = tf.less(freki, rr_max_array);
+        let temp_hr = tf.where(tf.logicalAnd(hr_min_array_log, hr_max_array_log), pxx, tf.zerosLike(pxx));
+        let temp_rr = tf.where(tf.logicalAnd(rr_min_array_log, rr_max_array_log), pxx, tf.zerosLike(pxx));
+        let hr =  temp_hr.argMax().dataSync();//.dataSync();//data.length*sf*pxx.abs().slice([hr_min], [hr_max]).argMax().dataSync();
+        let rr = temp_rr.argMax().dataSync();//.dataSync();//data.length*sf*pxx.abs().slice([rr_min], [rr_max]).argMax().dataSync();
+        console.log([hr, rr]);
+        tf.dispose(freki);tf.dispose(hr_min_array);tf.dispose(hr_max_array);tf.dispose(rr_min_array);tf.dispose(rr_max_array);
+        tf.dispose(hr_min_array_log);tf.dispose(rr_min_array_log);tf.dispose(hr_max_array_log);tf.dispose(rr_max_array_log);
+        tf.dispose(temp_hr);tf.dispose(temp_rr);tf.dispose(d);tf.dispose(c);tf.dispose(pxx);tf.dispose(res);
+        tf.dispose(input);tf.dispose(imag);tf.dispose(real);
+        //console.log(tf.memory());
+        output.innerHTML  += "hearth rate: " + 60/data.length*sf*hr + "\n";
+        output.innerHTML  += "respiratory: " + 60/data.length*sf*rr + "\n";
+        output.querySelectorAll('*').forEach(n => n.remove());
+    return undefined;
+    }
+    window.addEventListener('devicemotion', function(event) {
+
+
+        let slider_value = slider.value ;
+
+        console.log(slider_value);
+
+        let x = event.rotationRate.alpha;  // In degree in the range [-180,180]
+        let y = event.rotationRate.beta;
+        let z = event.rotationRate.gamma;
+        t = event.interval;
+
+        //console.log(xs)
+        if (slider_value==1 && ii%skip==0){xs.push(x);}
+        if (slider_value==2 && ii%skip==0){ys.push(y);}
+        if (slider_value==3 && ii%skip==0){zs.push(z);}
+        if ((slider_value==1 && xs.length > size && ii%(10*skip) == 0)||(slider_value==2 && ys.length > size && ii%(10*skip)== 0)||(slider_value==3 && zs.length > size && ii%(10*skip) == 0)) {
+
+            //output.innerHTML  = "alpha : " + z + "\n";
+            //output.innerHTML  += "beta : " + x + "\n";
+            //output.innerHTML += "gamma: " + y + "\n";
+            output.innerHTML = "Res: " + 60*1/size*1000/t/skip + "\n";
+            if (slider_value==1){
+                xs = xs.slice(Math.max(xs.length - 128, 0));
+                console.log(xs.length);
+                data = xs;
+                sf = 1000/t/skip;
+                const tidytmp = tf.tidy(pwr_spect);
+
+            }
+            if (slider_value==2){
+                ys = ys.slice(Math.max(ys.length - 128, 0));
+                console.log(ys.length);
+                data = ys;
+                sf = 1000/t/skip;
+                const tidytmp = tf.tidy(pwr_spect);
+                //console.log(tf.memory());
+
+            }
+            if (slider_value==3){
+                zs = zs.slice(Math.max(zs.length - 128, 0));
+                console.log(zs.length);
+                data = zs;
+                sf = 1000/t/skip;
+                const tidytmp = tf.tidy(pwr_spect);
+                
+
+            }
+        }
+
+
+        ii += 1;
+
+    });
+    document.removeEventListener("devicemotion", function(event){console.log("siker")});
+
+</script>
 </body>
 </html>
+
+
+
