--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@ Wait 30s!
         tf.dispose(input);tf.dispose(imag);tf.dispose(real);
         //console.log(tf.memory());
         //output.innerHTML  += "hearth rate: " + 60/data.length*sf*hr + "\n";
-        output.innerHTML  += "<p style=\"font-size:30px\"> respiratory: " + 60/data.length*sf*rr + "\n<\p>";
+        output.innerHTML  += "<p style=\"font-size:30px\"> respiratory: " + 60/data.length*sf*rr + "\n<\\p>";
         output.querySelectorAll('*').forEach(n => n.remove());
     return undefined;
     }
