--- a/index.html
+++ b/index.html
@@ -51,11 +51,11 @@
     <option value="2" selected="selected">y</option>
     <option value="3">z</option>
 </select>
-<p style=\"font-size:120px\">
+<div style="width:200px;overflow:auto">
 <pre class="output">
 Wait 30s!
 </pre>
-</p>
+<\div>
 
 
 <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@0.15.1/dist/tf.min.js"></script>
