--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 <pre class="output">
 Wait 30s!
 </pre>
-<\div>
+</div>
 
 
 <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@0.15.1/dist/tf.min.js"></script>
